style: z-index conflict resolved
the error comp is above date and time comps

--- a/styles/ui/Error.module.scss
+++ b/styles/ui/Error.module.scss
@@ -7,7 +7,7 @@ $font_color: #424246;
 	bottom: 0;
 	left: 0;
 
-	z-index: 5;
+	z-index: 10;
 
 	display: flex;
 	justify-content: center;
